Fix SonarQube findings across backend controllers
- PortFileWriter: extract nested try block into restrictToOwner() (S1141)
- CollectionController, FolderController, ImageController: replace
  Stream.collect(Collectors.toList()) with Stream.toList() (S6204)
- ImageController: extract repeated column-name literals into constants
  used by both the SQL query and ResultSet lookups (S1192)
- SpaController: bind the {path} template variable to a method parameter
  and restrict the endpoint to GET (S6856, S3752)
- ScrubController: remove an orphaned pathService field assignment left
  over from a previous edit, which broke compilation